c_parser/src/parser.output
Terminals unused in grammar

   T_FOR
   T_RETURN
   T_WHILE
   T_ELLIPSIS
   T_RIGHT_ASSIGN
   T_LEFT_ASSIGN
   T_ADD_ASSIGN
   T_SUB_ASSIGN
   T_MUL_ASSIGN
   T_DIV_ASSIGN
   T_MOD_ASSIGN
   T_AND_ASSIGN
   T_XOR_ASSIGN
   T_OR_ASSIGN
   T_RIGHT_OP
   T_LEFT_OP
   T_INC_OP
   T_DEC_OP
   T_PTR_OP
   T_INEXCLUS_OR
   T_EXCLUS_OR
   T_COLOUMN
   T_LSQUAREBRACKET
   T_RSQUAREBRACKET
   T_DOT
   T_AMPERSAND
   T_EXCLAMATION
   T_TILDE
   T_QUESTIONMARK


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROGRAM

    2 PROGRAM: ALL_DECLEARARION
    3        | PROGRAM ALL_DECLEARARION

    4 ALL_DECLEARARION: DECLARATION
    5                 | FUNCTION

    6 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    7         | DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
    8         | DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    9         | DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT

   10 COMPOUND_STATEMENT: T_LCURLYBRACKET T_RCURLYBRACKET
   11                   | T_LCURLYBRACKET DECLARATION_LIST T_RCURLYBRACKET
   12                   | T_LCURLYBRACKET STATEMENT_LIST T_RCURLYBRACKET

   13 STATEMENT_LIST: STATEMENT
   14               | STATEMENT_LIST STATEMENT

   15 STATEMENT: COMPOUND_STATEMENT
   16          | IF_STATEMENT

   17 IF_STATEMENT: T_IF T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   18             | T_IF T_LBRACKET EXPRESSION T_RBRACKET T_LCURLYBRACKET DECLARATION_LIST T_RCURLYBRACKET T_ELSE STATEMENT

   19 EXPRESSION: INITIALIZER
   20           | T_LBRACKET ASSIGNMENT_EXPRESSION T_RBRACKET
   21           | PRIMARY_EXPRESSION EXPRESSION_OPERATOR INITIALIZER

   22 EXPRESSION_OPERATOR: T_EQ_OP
   23                    | T_NE_OP
   24                    | T_GE_OP
   25                    | T_LE_OP
   26                    | T_OR_OP
   27                    | T_AND_OP

   28 DECLARATION_LIST: DECLARATION
   29                 | DECLARATION_LIST DECLARATION

   30 PARAM_DECLARATION_LIST: DECLARATION_SPECIFIERS DECLARATOR
   31                       | DECLARATION_SPECIFIERS DECLARATOR T_COMMA PARAM_DECLARATION_LIST

   32 DECLARATION: DECLARATION_SPECIFIERS T_SIMICOLOUMN
   33            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SIMICOLOUMN
   34            | RE_DECLARATION

   35 RE_DECLARATION: INIT_DECLARATOR_LIST T_SIMICOLOUMN

   36 DECLARATION_SPECIFIERS: TYPE_SPECIFIER

   37 INIT_DECLARATOR_LIST: INIT_DECLARATOR

   38 INIT_DECLARATOR: DECLARATOR
   39                | DECLARATOR T_EQUAL INITIALIZER

   40 DECLARATOR: T_STAR DIRECT_DECLARATOR
   41           | DIRECT_DECLARATOR

   42 DIRECT_DECLARATOR: T_VARIABLE

   43 TYPE_SPECIFIER: T_INT

   44 INITIALIZER: ASSIGNMENT_EXPRESSION

   45 ASSIGNMENT_EXPRESSION: UNARY_EXPRESSION

   46 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   47                 | PRIMARY_EXPRESSION OPERATOR UNARY_EXPRESSION

   48 OPERATOR: T_MINUS
   49         | T_PLUS
   50         | T_STAR
   51         | T_DIVIDE
   52         | T_MOD
   53         | T_EQUAL

   54 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION

   55 PRIMARY_EXPRESSION: T_VARIABLE
   56                   | T_NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
T_ELSE (258) 18
T_FOR (259)
T_IF (260) 17 18
T_INT (261) 43
T_RETURN (262)
T_WHILE (263)
T_NUMBER (264) 56
T_VARIABLE (265) 42 55
T_ELLIPSIS (266)
T_RIGHT_ASSIGN (267)
T_LEFT_ASSIGN (268)
T_ADD_ASSIGN (269)
T_SUB_ASSIGN (270)
T_MUL_ASSIGN (271)
T_DIV_ASSIGN (272)
T_MOD_ASSIGN (273)
T_AND_ASSIGN (274)
T_XOR_ASSIGN (275)
T_OR_ASSIGN (276)
T_RIGHT_OP (277)
T_LEFT_OP (278)
T_INC_OP (279)
T_DEC_OP (280)
T_PTR_OP (281)
T_AND_OP (282) 27
T_OR_OP (283) 26
T_LE_OP (284) 25
T_GE_OP (285) 24
T_EQ_OP (286) 22
T_NE_OP (287) 23
T_INEXCLUS_OR (288)
T_EXCLUS_OR (289)
T_SIMICOLOUMN (290) 32 33 35
T_LCURLYBRACKET (291) 10 11 12 18
T_RCURLYBRACKET (292) 10 11 12 18
T_COMMA (293) 31
T_COLOUMN (294)
T_EQUAL (295) 39 53
T_LBRACKET (296) 6 7 8 9 17 18 20
T_RBRACKET (297) 6 7 8 9 17 18 20
T_LSQUAREBRACKET (298)
T_RSQUAREBRACKET (299)
T_DOT (300)
T_AMPERSAND (301)
T_EXCLAMATION (302)
T_TILDE (303)
T_MINUS (304) 48
T_PLUS (305) 49
T_STAR (306) 40 50
T_DIVIDE (307) 51
T_MOD (308) 52
T_QUESTIONMARK (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
ROOT (56)
    on left: 1, on right: 0
PROGRAM (57)
    on left: 2 3, on right: 1 3
ALL_DECLEARARION (58)
    on left: 4 5, on right: 2 3
FUNCTION (59)
    on left: 6 7 8 9, on right: 5
COMPOUND_STATEMENT (60)
    on left: 10 11 12, on right: 6 7 8 9 15
STATEMENT_LIST (61)
    on left: 13 14, on right: 12 14
STATEMENT (62)
    on left: 15 16, on right: 13 14 17 18
IF_STATEMENT (63)
    on left: 17 18, on right: 16
EXPRESSION (64)
    on left: 19 20 21, on right: 17 18
EXPRESSION_OPERATOR (65)
    on left: 22 23 24 25 26 27, on right: 21
DECLARATION_LIST (66)
    on left: 28 29, on right: 11 18 29
PARAM_DECLARATION_LIST (67)
    on left: 30 31, on right: 6 8 31
DECLARATION (68)
    on left: 32 33 34, on right: 4 28 29
RE_DECLARATION (69)
    on left: 35, on right: 34
DECLARATION_SPECIFIERS (70)
    on left: 36, on right: 6 7 30 31 32 33
INIT_DECLARATOR_LIST (71)
    on left: 37, on right: 33 35
INIT_DECLARATOR (72)
    on left: 38 39, on right: 37
DECLARATOR (73)
    on left: 40 41, on right: 6 7 8 9 30 31 38 39
DIRECT_DECLARATOR (74)
    on left: 42, on right: 40 41
TYPE_SPECIFIER (75)
    on left: 43, on right: 36
INITIALIZER (76)
    on left: 44, on right: 19 21 39
ASSIGNMENT_EXPRESSION (77)
    on left: 45, on right: 20 44
UNARY_EXPRESSION (78)
    on left: 46 47, on right: 45 47
OPERATOR (79)
    on left: 48 49 50 51 52 53, on right: 47
POSTFIX_EXPRESSION (80)
    on left: 54, on right: 46
PRIMARY_EXPRESSION (81)
    on left: 55 56, on right: 21 47 54


State 0

    0 $accept: . ROOT $end

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2
    T_STAR      shift, and go to state 3

    ROOT                    go to state 4
    PROGRAM                 go to state 5
    ALL_DECLEARARION        go to state 6
    FUNCTION                go to state 7
    DECLARATION             go to state 8
    RE_DECLARATION          go to state 9
    DECLARATION_SPECIFIERS  go to state 10
    INIT_DECLARATOR_LIST    go to state 11
    INIT_DECLARATOR         go to state 12
    DECLARATOR              go to state 13
    DIRECT_DECLARATOR       go to state 14
    TYPE_SPECIFIER          go to state 15


State 1

   43 TYPE_SPECIFIER: T_INT .

    $default  reduce using rule 43 (TYPE_SPECIFIER)


State 2

   42 DIRECT_DECLARATOR: T_VARIABLE .

    $default  reduce using rule 42 (DIRECT_DECLARATOR)


State 3

   40 DECLARATOR: T_STAR . DIRECT_DECLARATOR

    T_VARIABLE  shift, and go to state 2

    DIRECT_DECLARATOR  go to state 16


State 4

    0 $accept: ROOT . $end

    $end  shift, and go to state 17


State 5

    1 ROOT: PROGRAM .
    3 PROGRAM: PROGRAM . ALL_DECLEARARION

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2
    T_STAR      shift, and go to state 3

    $default  reduce using rule 1 (ROOT)

    ALL_DECLEARARION        go to state 18
    FUNCTION                go to state 7
    DECLARATION             go to state 8
    RE_DECLARATION          go to state 9
    DECLARATION_SPECIFIERS  go to state 10
    INIT_DECLARATOR_LIST    go to state 11
    INIT_DECLARATOR         go to state 12
    DECLARATOR              go to state 13
    DIRECT_DECLARATOR       go to state 14
    TYPE_SPECIFIER          go to state 15


State 6

    2 PROGRAM: ALL_DECLEARARION .

    $default  reduce using rule 2 (PROGRAM)


State 7

    5 ALL_DECLEARARION: FUNCTION .

    $default  reduce using rule 5 (ALL_DECLEARARION)


State 8

    4 ALL_DECLEARARION: DECLARATION .

    $default  reduce using rule 4 (ALL_DECLEARARION)


State 9

   34 DECLARATION: RE_DECLARATION .

    $default  reduce using rule 34 (DECLARATION)


State 10

    6 FUNCTION: DECLARATION_SPECIFIERS . DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    7         | DECLARATION_SPECIFIERS . DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   32 DECLARATION: DECLARATION_SPECIFIERS . T_SIMICOLOUMN
   33            | DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST T_SIMICOLOUMN

    T_VARIABLE     shift, and go to state 2
    T_SIMICOLOUMN  shift, and go to state 19
    T_STAR         shift, and go to state 3

    INIT_DECLARATOR_LIST  go to state 20
    INIT_DECLARATOR       go to state 12
    DECLARATOR            go to state 21
    DIRECT_DECLARATOR     go to state 14


State 11

   35 RE_DECLARATION: INIT_DECLARATOR_LIST . T_SIMICOLOUMN

    T_SIMICOLOUMN  shift, and go to state 22


State 12

   37 INIT_DECLARATOR_LIST: INIT_DECLARATOR .

    $default  reduce using rule 37 (INIT_DECLARATOR_LIST)


State 13

    8 FUNCTION: DECLARATOR . T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    9         | DECLARATOR . T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   38 INIT_DECLARATOR: DECLARATOR .
   39                | DECLARATOR . T_EQUAL INITIALIZER

    T_EQUAL     shift, and go to state 23
    T_LBRACKET  shift, and go to state 24

    $default  reduce using rule 38 (INIT_DECLARATOR)


State 14

   41 DECLARATOR: DIRECT_DECLARATOR .

    $default  reduce using rule 41 (DECLARATOR)


State 15

   36 DECLARATION_SPECIFIERS: TYPE_SPECIFIER .

    $default  reduce using rule 36 (DECLARATION_SPECIFIERS)


State 16

   40 DECLARATOR: T_STAR DIRECT_DECLARATOR .

    $default  reduce using rule 40 (DECLARATOR)


State 17

    0 $accept: ROOT $end .

    $default  accept


State 18

    3 PROGRAM: PROGRAM ALL_DECLEARARION .

    $default  reduce using rule 3 (PROGRAM)


State 19

   32 DECLARATION: DECLARATION_SPECIFIERS T_SIMICOLOUMN .

    $default  reduce using rule 32 (DECLARATION)


State 20

   33 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST . T_SIMICOLOUMN

    T_SIMICOLOUMN  shift, and go to state 25


State 21

    6 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR . T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    7         | DECLARATION_SPECIFIERS DECLARATOR . T_LBRACKET T_RBRACKET COMPOUND_STATEMENT
   38 INIT_DECLARATOR: DECLARATOR .
   39                | DECLARATOR . T_EQUAL INITIALIZER

    T_EQUAL     shift, and go to state 23
    T_LBRACKET  shift, and go to state 26

    $default  reduce using rule 38 (INIT_DECLARATOR)


State 22

   35 RE_DECLARATION: INIT_DECLARATOR_LIST T_SIMICOLOUMN .

    $default  reduce using rule 35 (RE_DECLARATION)


State 23

   39 INIT_DECLARATOR: DECLARATOR T_EQUAL . INITIALIZER

    T_NUMBER    shift, and go to state 27
    T_VARIABLE  shift, and go to state 28

    INITIALIZER            go to state 29
    ASSIGNMENT_EXPRESSION  go to state 30
    UNARY_EXPRESSION       go to state 31
    POSTFIX_EXPRESSION     go to state 32
    PRIMARY_EXPRESSION     go to state 33


State 24

    8 FUNCTION: DECLARATOR T_LBRACKET . PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    9         | DECLARATOR T_LBRACKET . T_RBRACKET COMPOUND_STATEMENT

    T_INT       shift, and go to state 1
    T_RBRACKET  shift, and go to state 34

    PARAM_DECLARATION_LIST  go to state 35
    DECLARATION_SPECIFIERS  go to state 36
    TYPE_SPECIFIER          go to state 15


State 25

   33 DECLARATION: DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SIMICOLOUMN .

    $default  reduce using rule 33 (DECLARATION)


State 26

    6 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET . PARAM_DECLARATION_LIST T_RBRACKET COMPOUND_STATEMENT
    7         | DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET . T_RBRACKET COMPOUND_STATEMENT

    T_INT       shift, and go to state 1
    T_RBRACKET  shift, and go to state 37

    PARAM_DECLARATION_LIST  go to state 38
    DECLARATION_SPECIFIERS  go to state 36
    TYPE_SPECIFIER          go to state 15


State 27

   56 PRIMARY_EXPRESSION: T_NUMBER .

    $default  reduce using rule 56 (PRIMARY_EXPRESSION)


State 28

   55 PRIMARY_EXPRESSION: T_VARIABLE .

    $default  reduce using rule 55 (PRIMARY_EXPRESSION)


State 29

   39 INIT_DECLARATOR: DECLARATOR T_EQUAL INITIALIZER .

    $default  reduce using rule 39 (INIT_DECLARATOR)


State 30

   44 INITIALIZER: ASSIGNMENT_EXPRESSION .

    $default  reduce using rule 44 (INITIALIZER)


State 31

   45 ASSIGNMENT_EXPRESSION: UNARY_EXPRESSION .

    $default  reduce using rule 45 (ASSIGNMENT_EXPRESSION)


State 32

   46 UNARY_EXPRESSION: POSTFIX_EXPRESSION .

    $default  reduce using rule 46 (UNARY_EXPRESSION)


State 33

   47 UNARY_EXPRESSION: PRIMARY_EXPRESSION . OPERATOR UNARY_EXPRESSION
   54 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION .

    T_EQUAL   shift, and go to state 39
    T_MINUS   shift, and go to state 40
    T_PLUS    shift, and go to state 41
    T_STAR    shift, and go to state 42
    T_DIVIDE  shift, and go to state 43
    T_MOD     shift, and go to state 44

    $default  reduce using rule 54 (POSTFIX_EXPRESSION)

    OPERATOR  go to state 45


State 34

    9 FUNCTION: DECLARATOR T_LBRACKET T_RBRACKET . COMPOUND_STATEMENT

    T_LCURLYBRACKET  shift, and go to state 46

    COMPOUND_STATEMENT  go to state 47


State 35

    8 FUNCTION: DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST . T_RBRACKET COMPOUND_STATEMENT

    T_RBRACKET  shift, and go to state 48


State 36

   30 PARAM_DECLARATION_LIST: DECLARATION_SPECIFIERS . DECLARATOR
   31                       | DECLARATION_SPECIFIERS . DECLARATOR T_COMMA PARAM_DECLARATION_LIST

    T_VARIABLE  shift, and go to state 2
    T_STAR      shift, and go to state 3

    DECLARATOR         go to state 49
    DIRECT_DECLARATOR  go to state 14


State 37

    7 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET T_RBRACKET . COMPOUND_STATEMENT

    T_LCURLYBRACKET  shift, and go to state 46

    COMPOUND_STATEMENT  go to state 50


State 38

    6 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST . T_RBRACKET COMPOUND_STATEMENT

    T_RBRACKET  shift, and go to state 51


State 39

   53 OPERATOR: T_EQUAL .

    $default  reduce using rule 53 (OPERATOR)


State 40

   48 OPERATOR: T_MINUS .

    $default  reduce using rule 48 (OPERATOR)


State 41

   49 OPERATOR: T_PLUS .

    $default  reduce using rule 49 (OPERATOR)


State 42

   50 OPERATOR: T_STAR .

    $default  reduce using rule 50 (OPERATOR)


State 43

   51 OPERATOR: T_DIVIDE .

    $default  reduce using rule 51 (OPERATOR)


State 44

   52 OPERATOR: T_MOD .

    $default  reduce using rule 52 (OPERATOR)


State 45

   47 UNARY_EXPRESSION: PRIMARY_EXPRESSION OPERATOR . UNARY_EXPRESSION

    T_NUMBER    shift, and go to state 27
    T_VARIABLE  shift, and go to state 28

    UNARY_EXPRESSION    go to state 52
    POSTFIX_EXPRESSION  go to state 32
    PRIMARY_EXPRESSION  go to state 33


State 46

   10 COMPOUND_STATEMENT: T_LCURLYBRACKET . T_RCURLYBRACKET
   11                   | T_LCURLYBRACKET . DECLARATION_LIST T_RCURLYBRACKET
   12                   | T_LCURLYBRACKET . STATEMENT_LIST T_RCURLYBRACKET

    T_IF             shift, and go to state 53
    T_INT            shift, and go to state 1
    T_VARIABLE       shift, and go to state 2
    T_LCURLYBRACKET  shift, and go to state 46
    T_RCURLYBRACKET  shift, and go to state 54
    T_STAR           shift, and go to state 3

    COMPOUND_STATEMENT      go to state 55
    STATEMENT_LIST          go to state 56
    STATEMENT               go to state 57
    IF_STATEMENT            go to state 58
    DECLARATION_LIST        go to state 59
    DECLARATION             go to state 60
    RE_DECLARATION          go to state 9
    DECLARATION_SPECIFIERS  go to state 61
    INIT_DECLARATOR_LIST    go to state 11
    INIT_DECLARATOR         go to state 12
    DECLARATOR              go to state 62
    DIRECT_DECLARATOR       go to state 14
    TYPE_SPECIFIER          go to state 15


State 47

    9 FUNCTION: DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT .

    $default  reduce using rule 9 (FUNCTION)


State 48

    8 FUNCTION: DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET . COMPOUND_STATEMENT

    T_LCURLYBRACKET  shift, and go to state 46

    COMPOUND_STATEMENT  go to state 63


State 49

   30 PARAM_DECLARATION_LIST: DECLARATION_SPECIFIERS DECLARATOR .
   31                       | DECLARATION_SPECIFIERS DECLARATOR . T_COMMA PARAM_DECLARATION_LIST

    T_COMMA  shift, and go to state 64

    $default  reduce using rule 30 (PARAM_DECLARATION_LIST)


State 50

    7 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET T_RBRACKET COMPOUND_STATEMENT .

    $default  reduce using rule 7 (FUNCTION)


State 51

    6 FUNCTION: DECLARATION_SPECIFIERS DECLARATOR T_LBRACKET PARAM_DECLARATION_LIST T_RBRACKET . COMPOUND_STATEMENT

    T_LCURLYBRACKET  shift, and go to state 46

    COMPOUND_STATEMENT  go to state 65


State 52

   47 UNARY_EXPRESSION: PRIMARY_EXPRESSION OPERATOR UNARY_EXPRESSION .

    $default  reduce using rule 47 (UNARY_EXPRESSION)


State 53

   17 IF_STATEMENT: T_IF . T_LBRACKET EXPRESSION T_RBRACKET STATEMENT
   18             | T_IF . T_LBRACKET EXPRESSION T_RBRACKET T_LCURLYBRACKET DECLARATION_LIST T_RCURLYBRACKET T_ELSE STATEMENT
